1ck-twilio/1ck-twilio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: twilio-1ck-svc
  namespace: 1ck
spec:
  replicas: 1
  selector:
    matchLabels:
      app: twilio-1ck-svc
  template:
    metadata:
      labels:
        app: twilio-1ck-svc
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: 1ck-twilio
        image: registry.gitlab.com/goatlab/corporate/moutain/mountain/1ck-twilio:0.2
        imagePullPolicy: Always
        ports:
        - name: twilio-1ck-port
          containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: twilio-1ck-svc
  namespace: 1ck
  labels:
    app: twilio-1ck-svc
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: twilio-http
  selector:
    app: twilio-1ck-svc
